# sharesystem

./: .gitignore  README.md  ionic.config.json  package-lock.json  package.json
public/: index.html
src/: App.test.tsx  App.tsx
src/components/: AccountCreator.tsx  AppPage.tsx  ConnectedApp.tsx  LearnPage.tsx  ResourceEditor.tsx  SolanaConnection.tsx  TrustTableEditor.tsx
src/lib/: ResourceShareSystem.tsx  bootstrap.tsx  lib-mock.test.tsx  lib-mock.tsx  lib-serialization.test.tsx  lib-serialization.tsx  lib-types.tsx  lib.integration.test.tsx  lib.test.tsx  lib.tsx  util.integration.test.tsx  util.test.tsx  util.tsx
src/pages/: AccountTab.tsx  ChallengesTab.tsx  ResourcesTab.tsx
src/program-rust/: Cargo.toml
src/program-rust-bootstrap/: Cargo.toml
src/program-rust-bootstrap/src/: main.rs
src/program-rust-resource/: Cargo.toml
src/program-rust-resource/src/: error.rs  instruction.rs  lib.rs  types.rs
src/program-rust-searchengine/: Cargo.toml
src/program-rust-searchengine/src/: constants.rs  error.rs  instruction.rs  lib.rs  types.rs
