
[package]
name = "solana-bpf-searchengine"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
byteorder = "1.3"
solana-program = "=1.4.8"
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.3"
borsh = "0.8.1"

[lib]
crate-type = ["cdylib", "lib"]

